@@ -147,7 +147,7 @@
 <li>package require <b class="pkgname">snit</b></li>
 </ul>
 <ul class="syntax">
-<li><a href="#1"><b class="cmd">::pt::peg::interpreter</b> <i class="arg">objectName</i> <i class="arg">grammar</i></a></li>
+<li><a href="#1"><b class="cmd">::pt::peg::interp</b> <i class="arg">objectName</i> <i class="arg">grammar</i></a></li>
 <li><a href="#2"><i class="arg">objectName</i> <b class="method">use</b> <i class="arg">grammar</i></a></li>
 <li><a href="#3"><i class="arg">objectName</i> <b class="method">destroy</b></a></li>
 <li><a href="#4"><i class="arg">objectName</i> <b class="method">parse</b> <i class="arg">chan</i></a></li>
@@ -175,7 +175,7 @@ associated export plugin <b class="package"><a href="pt_peg_export_container.htm
 <div id="subsection1" class="subsection"><h3><a name="subsection1">Class API</a></h3>
 <p>The package exports the API described here.</p>
 <dl class="definitions">
-<dt><a name="1"><b class="cmd">::pt::peg::interpreter</b> <i class="arg">objectName</i> <i class="arg">grammar</i></a></dt>
+<dt><a name="1"><b class="cmd">::pt::peg::interp</b> <i class="arg">objectName</i> <i class="arg">grammar</i></a></dt>
 <dd><p>The command creates a new parser object and returns the fully
 qualified name of the object command as its result. The API of this
 object command is described in the section <span class="sectref"><a href="#subsection2">Object API</a></span>. It
